Prepare backend config for container deployment